--- a/package.json
+++ b/package.json
@@ -9,10 +9,15 @@
   "dependencies": {
     "@copilotkit/react-core": "^1.8.12",
     "@copilotkit/react-ui": "^1.8.12",
-    "@copilotkit/sdk-js": "^1.8.12",
+    "@copilotkit/backend": "^1.8.12",
     "@supabase/supabase-js": "^2.42.2",
     "next": "14.2.3",
     "react": "18.2.0",
     "react-dom": "18.2.0"
+  },
+  "devDependencies": {
+    "typescript": "^5.4.0",
+    "@types/react": "^18.2.0",
+    "@types/node": "^20.0.0"
   }
 }
