--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "car-chat",
+  "name": "copilotkit-chat-vercel",
   "version": "1.0.0",
   "scripts": {
     "dev": "next dev",
@@ -10,30 +10,9 @@
     "@copilotkit/react-core": "1.8.11",
     "@copilotkit/react-ui": "1.8.11",
     "@copilotkit/runtime": "1.8.11",
-    "@hookform/resolvers": "^4.1.2",
-    "@radix-ui/react-label": "^2.1.2",
-    "@radix-ui/react-popover": "^1.1.6",
-    "@radix-ui/react-select": "^2.1.6",
-    "@radix-ui/react-slot": "^1.1.2",
-    "@tavily/core": "^0.3.1",
-    "@tremor/react": "^3.18.7",
-    "class-variance-authority": "^0.7.1",
-    "clsx": "^2.1.1",
-    "date-fns": "^4.1.0",
-    "lucide-react": "^0.476.0",
+    "@supabase/supabase-js": "^2.42.2",
     "next": "15.2.0-canary.76",
     "react": "^19.0.0",
-    "react-day-picker": "8.10.1",
-    "react-dom": "^19.0.0",
-    "react-hook-form": "^7.54.2",
-    "recharts": "^2.15.1",
-    "tailwind-merge": "^3.0.2",
-    "tailwindcss-animate": "^1.0.7",
-    "zod": "^3.24.2"
-  },
-  "devDependencies": {
-    "typescript": "^5.4.0",
-    "@types/react": "^18.2.0",
-    "@types/node": "^20.0.0"
+    "react-dom": "^19.0.0"
   }
 }
