--- a/package.json
+++ b/package.json
@@ -13,6 +13,9 @@
     "@supabase/supabase-js": "^2.42.2",
     "next": "15.2.0-canary.76",
     "react": "^19.0.0",
-    "react-dom": "^19.0.0"
+    "react-dom": "^19.0.0",
+    "typescript": "^5.4.0",
+    "@types/react": "^18.2.0",
+    "@types/node": "^20.0.0"
   }
 }
