--- a/package.json
+++ b/package.json
@@ -11,11 +11,11 @@
     "@copilotkit/react-ui": "1.8.11",
     "@copilotkit/runtime": "1.8.11",
     "@supabase/supabase-js": "^2.42.2",
-    "next": "15.2.0-canary.76",
+    "class-variance-authority": "^0.7.0",
+    "tailwind-variants": "^0.2.1",
+    "tailwindcss-animate": "^1.0.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "typescript": "^5.4.0",
-    "@types/react": "^18.2.0",
-    "@types/node": "^20.0.0"
+    "next": "15.2.0-canary.76"
   }
 }
