--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "class-variance-authority": "^0.7.0",
     "tailwind-variants": "^0.2.1",
     "tailwindcss-animate": "^1.0.0",
+    "tailwind-merge": "^1.13.2",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "next": "15.2.0-canary.76"
