--- a/package.json
+++ b/package.json
@@ -18,5 +18,10 @@
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "next": "15.2.0-canary.76"
+  },
+  "devDependencies": {
+    "typescript": "^5.3.3",
+    "@types/react": "^18.2.40",
+    "@types/node": "^20.11.30"
   }
 }
