--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@copilotkit/runtime": "1.8.11",
     "@supabase/supabase-js": "^2.42.2",
     "class-variance-authority": "^0.7.0",
+    "tailwindcss": "^3.4.1",
     "tailwind-variants": "^0.2.1",
     "tailwindcss-animate": "^1.0.0",
     "tailwind-merge": "^1.13.2",
