--- a/package.json
+++ b/package.json
@@ -7,23 +7,17 @@
     "start": "next start"
   },
   "dependencies": {
-    "@copilotkit/react-core": "1.8.11",
-    "@copilotkit/react-ui": "1.8.11",
-    "@copilotkit/runtime": "1.8.11",
     "@supabase/supabase-js": "^2.42.2",
-    "class-variance-authority": "^0.7.0",
-    "tailwindcss": "^3.4.1",
-    "tailwind-variants": "^0.2.1",
-    "tailwindcss-animate": "^1.0.0",
-    "tailwind-merge": "^1.13.2",
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0",
-    "next": "15.2.0-canary.76",
+    "@copilotkit/react-core": "1.8.13",
+    "@copilotkit/react-ui": "1.8.13",
     "@copilotkit/runtime-client-gql": "1.8.13",
     "clsx": "^1.2.1",
     "motion": "^11.18.1",
     "next": "14.2.1",
-    "reactflow": "^11.11.4"
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
+    "reactflow": "^11.11.4",
+    "tailwind-merge": "^1.13.2"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
