--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "react-dom": "^18.2.0",
     "reactflow": "^11.11.4",
     "tailwind-merge": "^1.13.2",
-    "tailwind-animate": "^1.13.2"
+    "tailwindcss": "^3.4.1"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
